variables.Variables.scala.code
var x: Int = 0
while (estSurBiscuit==false) {
  avance()
  x+=1
  prendBiscuit()
}
c: Int = 0
while (c!=x) {
  recule()
}
poseBiscuit